--- a/index.html
+++ b/index.html
@@ -378,7 +378,6 @@
                             </svg>
                         </a>
                     </li>
-
                     <li class="footer-socials-list-item">
                         <a class="footer-socials-link" href="">
                             <svg class="footer-socials-icon" width="24" height="24" aria-label="icon of twitter">
@@ -402,8 +401,90 @@
                     </li>
                 </ul>
             </div>
+
+            <div>
+                <form class="subscription-form">
+                    <label>
+                        Subscribe
+                        <input type="email" name="email" placeholder="E-mail" />
+                    </label>
+                    <button class="subscribe-button" type="submit">Subscribe
+                        <span class="container-subscribe-icon">
+                            <svg class="subscribe-icon" width="24" height="24" aria-label="paper-plane-icon">
+                                <use href="./images/icons.svg#icon-paper-plane"></use>
+                            </svg>
+                        </span>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
+    <!-- CALLBACK-FORM -->
+    <div class="backdrop">
+        <div class="modal">
+            <button class="callback-close-btn" type="button">
+                <svg class="callback-close-btn-icon" width="8px" height="8px" aria-label="close modal icon">
+                    <use href="./images/icons.svg#icon-cross"></use>
+                </svg>
+            </button>
+            <p class="callback-title">Leave your contacts and we will call you back</p>
+
+            <form name="callback-form">
+                <div class="container-callback">
+                    <label class="container-callback-label" for="user-name">Name</label>
+                    <div class="callback-input-wrapper">
+                        <input class="container-callback-input" type="text" name="user-name" id="user-name"
+                            title="Borys" pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+" required>
+                        <svg class="callback-form-icon" width="18" height="18" aria-label="icon person">
+                            <use href="./images/icons.svg#icon-person"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="container-callback">
+                    <label class="container-callback-label" for="user-phone">Phone</label>
+                    <div class="callback-input-wrapper">
+                        <input class="container-callback-input" type="tel" name="user-phone" id="user-phone"
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" required>
+                        <svg class="callback-form-icon" width="18" height="24" aria-label="icon phone">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="container-callback">
+                    <label class="container-callback-label" for="user-email">Email</label>
+                    <div class="callback-input-wrapper">
+                        <input class="container-callback-input" type="email" name="user-email" id="user-email" required>
+                        <svg class="callback-form-icon" width="18" height="24" aria-label="icon email">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="container-callback">
+                    <label class="container-callback-label" for="user-comment">Comment</label>
+                    <textarea class="container-callback-comment" name="user-comment" id="user-comment"
+                        placeholder="Text input"></textarea>
+                </div>
+
+                <div class="callback-checkbox-wrapper">
+                    <input class="container-callback-checkbox visually-hidden" type="checkbox" name="user-agreement"
+                        id="user-agreement" value="true" required>
+                    <label class="container-callback-checkbox-label" for="user-agreement">
+                        <span class="callback-form-own-checkbox">
+                            <svg class="callback-form-own-checkbox-icon" width="10" height="8" aria-label="checkmark">
+                                <use href="./images/icons.svg#icon-checkbox-active"></use>
+                            </svg>
+                        </span>I accept the terms and conditions of the
+                        <a class="link-to-privacy-policy" href="">Privacy Policy</a>
+                    </label>
+
+                </div>
+                <button class="callback-send-btn" type="submit">Send</button>
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
