please accept, stop torturing me

--- a/index.html
+++ b/index.html
@@ -409,18 +409,16 @@
                         <input class="subscribe-input" type="email" name="email" placeholder="E-mail" />
                     </label>
                     <button class="subscribe-button" type="submit">Subscribe
-                        <span class="container-subscribe-icon">
-                            <svg class="subscribe-icon" width="24" height="24" aria-label="paper-plane-icon">
-                                <use href="./images/icons.svg#icon-paper-plane"></use>
-                            </svg>
-                        </span>
+                        <svg class="subscribe-icon" width="24" height="24" aria-label="paper-plane-icon">
+                            <use href="./images/icons.svg#icon-paper-plane"></use>
+                        </svg>
                     </button>
                 </form>
             </div>
         </div>
     </footer>
     <!-- CALLBACK-FORM -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal">
             <button class="callback-close-btn" type="button">
                 <svg class="callback-close-btn-icon" width="8" height="8" aria-label="close modal icon">
